# schematis

./: Cargo.toml  README.md
src/: basics.rs  facets.rs  lib.rs  particles.rs
tests/: mod.rs
